--- a/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
+++ b/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
@@ -150,14 +150,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'age']\n",
+      "['vaibhs', '20']\n"
+     ]
+    }
+   ],
    "source": [
     "# 7) csv\n",
     "\n",
-    "import csv\n"
+    "import csv\n",
+    "with open('example.csv', mode = 'w', newline = '') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['name','age'])\n",
+    "    writer.writerow(['vaibhs',20])\n",
+    "\n",
+    "with open('example.csv',mode='r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
