--- a/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
+++ b/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
@@ -179,6 +179,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-05 13:45:47.729437\n",
+      "2025-01-04 13:45:47.729437\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8) Datetime --> gives current time and date\n",
+    "from datetime import datetime, timedelta\n",
+    "now = datetime.now()\n",
+    "print(now)\n",
+    "\n",
+    "yesterday = now-timedelta(days=1)\n",
+    "print(yesterday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1736065051.59622\n",
+      "1736065071.5974097\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9) time\n",
+    "import time \n",
+    "print(time.time())\n",
+    "time.sleep(20)\n",
+    "print(time.time())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
