--- a/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
+++ b/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
@@ -225,6 +225,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:4: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\vaibh\\AppData\\Local\\Temp\\ipykernel_4584\\637159522.py:4: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pattern = '\\d+' #--> digits in particular text\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10) Regular expression\n",
+    "import re\n",
+    "\n",
+    "pattern = '\\d+' #--> digits in particular text\n",
+    "\n",
+    "text='there are 123 apples'\n",
+    "match = re.search(pattern,text)\n",
+    "print(match.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
