--- a/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
@@ -71,12 +71,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121ecb36",
+   "id": "7f049506",
    "metadata": {},
    "source": [
-    "### Assignment 1: Importing and Using Modules\n",
-    "\n",
-    "Import the `math` module and use it to calculate the square root of 25 and the sine of 90 degrees.\n"
+    "Solution of the Assignments : --->\n"
    ]
   },
   {
@@ -98,16 +96,6 @@
     "from math import *\n",
     "print(sqrt(25))\n",
     "print(sin(90))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b48ca62a",
-   "metadata": {},
-   "source": [
-    "Assignment 2: Aliasing Modules\n",
-    "\n",
-    "Import the `datetime` module with an alias and use it to print the current date and time."
    ]
   },
   {
@@ -158,12 +146,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0e26a73e",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "9e2e23d0",
@@ -185,23 +167,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "97289f53",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "80c62aa8",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f57cf37",
-   "metadata": {},
    "source": []
   },
   {
@@ -213,23 +183,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "21d74e50",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c39a65d3",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8cb5cf9f",
-   "metadata": {},
    "source": []
   },
   {
@@ -241,23 +199,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "389d5860",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fdc6a501",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9545a0a2",
-   "metadata": {},
    "source": []
   },
   {
