--- a/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
@@ -117,16 +117,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "07d94ce4",
-   "metadata": {},
-   "source": [
-    "Assignment 3: Importing Specific Functions\n",
-    "\n",
-    "Import the `randint` function from the `random` module and use it to generate a random integer between 1 and 100."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "cfb11299",
@@ -172,7 +162,13 @@
    "id": "80c62aa8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    import non_existent_module\n",
+    "\n",
+    "except ImportError as e:\n",
+    "    print(f\"Error importing module {e}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -217,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
