test.ipynb deleted

--- a/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
@@ -158,10 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5067268a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error importing module: No module named 'non_existent_module'\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    import non_existent_module\n",
@@ -173,16 +181,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17e2bde6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dccc28d4",
    "metadata": {},
    "outputs": [],
    "source": []
