--- a/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
@@ -179,8 +179,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "17e2bde6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Assignment1(pythonBasics)solution.ipynb', 'Assignment2(controlflow)solution.ipynb', 'Assignment3(List)solution.ipynb', 'Assignment4(Tuple)solution.ipynb', 'Assignment5(Dict)solution.ipynb', 'Assignment6(Sets)solution.ipynb', 'Assignment7(functions)solution.ipynb', 'Assignment8(Modules&Packages)solution.ipynb', 'newdir']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.mkdir(\"newdir\")\n",
+    "print(os.listdir('.'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8efb498d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir('newdir')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "85f0983d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current python version : 3.12.1 (tags/v3.12.1:2305ca5, Dec  7 2023, 22:03:25) [MSC v.1937 64 bit (AMD64)]\n",
+      "command line args : ['C:\\\\Users\\\\vaibh\\\\AppData\\\\Roaming\\\\Python\\\\Python312\\\\site-packages\\\\ipykernel_launcher.py', '--f=c:\\\\Users\\\\vaibh\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-v3b61abecb540f7567c9a6d32c98e11f850150da70.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(f\"current python version : {sys.version}\")\n",
+    "print(f\"command line args : {sys.argv}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b1ac866d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.gcd(2,6))\n",
+    "print(math.factorial(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7ebedaf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-06\n",
+      "2025-01-06 14:31:51.773872\n",
+      "2025-04-16\n",
+      "Day of the week for given date is Friday\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime \n",
+    "print(datetime.date.today())\n",
+    "print(datetime.datetime.now())\n",
+    "future_date=datetime.date.today() + datetime.timedelta(days=100)\n",
+    "print(future_date)\n",
+    "\n",
+    "given_date = datetime.date(2025,1,3)\n",
+    "print(f\"Day of the week for given date is {given_date.strftime('%A')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa71b97c",
    "metadata": {},
    "outputs": [],
    "source": []
