--- a/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(Modules&Packages)solution.ipynb
@@ -280,8 +280,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "aa71b97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[41, 6, 10, 11, 39]\n",
+      "[39, 6, 10, 11, 41]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "random_numbers = [random.randint(1,50) for _ in range(5)]\n",
+    "print(random_numbers)\n",
+    "\n",
+    "random.shuffle(random_numbers)\n",
+    "\n",
+    "print(random_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a856b076",
    "metadata": {},
    "outputs": [],
    "source": []
