--- a/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
@@ -305,8 +305,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a856b076",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mypackages import module1, module2\n",
+    "\n",
+    "print(module1.addi(2,4))\n",
+    "print(module2.multii(2,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e2c2e1e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'addi' from 'mypackages' (d:\\AIML\\GIT\\Machine-learning-course\\2)Assignments\\Assignment8(modules&packages)solution\\mypackages\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmypackages\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m addi, multii\n\u001b[0;32m      2\u001b[0m addi(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'addi' from 'mypackages' (d:\\AIML\\GIT\\Machine-learning-course\\2)Assignments\\Assignment8(modules&packages)solution\\mypackages\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from mypackages import addi, multii\n",
+    "addi(2,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "740851d2",
    "metadata": {},
    "outputs": [],
    "source": []
