adding some important files via code

--- a/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "acd4b52f",
    "metadata": {},
    "outputs": [
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-05 19:25:51.559472\n"
+      "2025-01-06 15:13:03.840004\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "cfb11299",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97\n"
+      "4\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9e2e23d0",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "5067268a",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "17e2bde6",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Assignment1(pythonBasics)solution.ipynb', 'Assignment2(controlflow)solution.ipynb', 'Assignment3(List)solution.ipynb', 'Assignment4(Tuple)solution.ipynb', 'Assignment5(Dict)solution.ipynb', 'Assignment6(Sets)solution.ipynb', 'Assignment7(functions)solution.ipynb', 'Assignment8(Modules&Packages)solution.ipynb', 'newdir']\n"
+      "['Assignment8(Modules&Packages)solution.ipynb', 'mypackages', 'newdir']\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "8efb498d",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "85f0983d",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
      "output_type": "stream",
      "text": [
       "current python version : 3.12.1 (tags/v3.12.1:2305ca5, Dec  7 2023, 22:03:25) [MSC v.1937 64 bit (AMD64)]\n",
-      "command line args : ['C:\\\\Users\\\\vaibh\\\\AppData\\\\Roaming\\\\Python\\\\Python312\\\\site-packages\\\\ipykernel_launcher.py', '--f=c:\\\\Users\\\\vaibh\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-v3b61abecb540f7567c9a6d32c98e11f850150da70.json']\n"
+      "command line args : ['C:\\\\Users\\\\vaibh\\\\AppData\\\\Roaming\\\\Python\\\\Python312\\\\site-packages\\\\ipykernel_launcher.py', '--f=c:\\\\Users\\\\vaibh\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-v373d3a4244389c3ae292bcb8f4dd400b96b46d645.json']\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "b1ac866d",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "7ebedaf1",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
      "output_type": "stream",
      "text": [
       "2025-01-06\n",
-      "2025-01-06 14:31:51.773872\n",
+      "2025-01-06 15:12:55.172712\n",
       "2025-04-16\n",
       "Day of the week for given date is Friday\n"
      ]
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "aa71b97c",
    "metadata": {},
    "outputs": [
@@ -288,8 +288,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[41, 6, 10, 11, 39]\n",
-      "[39, 6, 10, 11, 41]\n"
+      "[20, 39, 26, 45, 40]\n",
+      "[45, 20, 40, 39, 26]\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "a856b076",
    "metadata": {},
    "outputs": [
@@ -327,25 +327,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "e2c2e1e4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'addi' from 'mypackages' (d:\\AIML\\GIT\\Machine-learning-course\\2)Assignments\\Assignment8(modules&packages)solution\\mypackages\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmypackages\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m addi, multii\n\u001b[0;32m      2\u001b[0m addi(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m4\u001b[39m)\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'addi' from 'mypackages' (d:\\AIML\\GIT\\Machine-learning-course\\2)Assignments\\Assignment8(modules&packages)solution\\mypackages\\__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
      ]
     }
    ],
    "source": [
-    "from mypackages import addi, multii\n",
-    "addi(2,4)"
+    "from mypackages import * #--> this shows error when package is in use in previous code\n",
+    "print(addi(2,4))"
    ]
   },
   {
