--- a/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "acd4b52f",
    "metadata": {},
    "outputs": [
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-01-06 15:13:03.840004\n"
+      "2025-01-06 15:21:46.900881\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "cfb11299",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "71\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "9e2e23d0",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "5067268a",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "17e2bde6",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "8efb498d",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "85f0983d",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "b1ac866d",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "7ebedaf1",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
      "output_type": "stream",
      "text": [
       "2025-01-06\n",
-      "2025-01-06 15:12:55.172712\n",
+      "2025-01-06 15:21:46.992422\n",
       "2025-04-16\n",
       "Day of the week for given date is Friday\n"
      ]
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "aa71b97c",
    "metadata": {},
    "outputs": [
@@ -288,8 +288,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 39, 26, 45, 40]\n",
-      "[45, 20, 40, 39, 26]\n"
+      "[8, 15, 23, 34, 39]\n",
+      "[15, 34, 39, 23, 8]\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "a856b076",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "e2c2e1e4",
    "metadata": {},
    "outputs": [
@@ -346,8 +346,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "740851d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mypackages.subpackage.module3 import divide\n",
+    "divide(4,8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f3beb1",
    "metadata": {},
    "outputs": [],
    "source": []
