--- a/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
+++ b/2)Assignments/Assignment8(modules&packages)solution/Assignment8(Modules&Packages)solution.ipynb
@@ -368,11 +368,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "73f3beb1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error importing function: cannot import name 'non_existent_function' from 'mypackages' (d:\\AIML\\GIT\\Machine-learning-course\\2)Assignments\\Assignment8(modules&packages)solution\\mypackages\\__init__.py)\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    from mypackages import non_existent_function\n",
+    "except ImportError as e:\n",
+    "    print(f\"Error importing function: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2129fd53",
+   "metadata": {},
+   "source": [
+    ".........................................END OF SOLUTION.................................."
+   ]
   }
  ],
  "metadata": {
