--- a/1)Notes/6-File Handling/file_operations.ipynb
+++ b/1)Notes/6-File Handling/file_operations.ipynb
@@ -31,10 +31,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, how are you\n",
+      "\n",
+      "i'm good \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read a file by line by line \n",
+    "with open('ex.txt','r') as file:\n",
+    "    for line in file:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, how are you\n",
+      "i'm good\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .strip() ---> removes new line character\n",
+    "with open('ex.txt','r') as file:\n",
+    "    for line in file:\n",
+    "        print(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writting a file(overwritting) --> prev data will be erased\n",
+    "with open('ex.txt','w') as file:\n",
+    "    file.write('hello!,world\\n')\n",
+    "    file.write('this is new line\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write a file without overwritting\n",
+    "with open('ex.txt','a') as file:\n",
+    "    file.write(\"append operation taking place!\\n\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writing list of lines \n",
+    "lines = ['first line \\n','second line\\n','third line\\n']\n",
+    "\n",
+    "with open('ex.txt','a') as file:\n",
+    "    file.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binary files --> ex.bin file is binary file \n",
+    "\n",
+    "# writing to a binary file \n",
+    "# wb --> means writebyte\n",
+    "\n",
+    "data = b'\\x00\\x01\\x02\\x03\\x04'\n",
+    "with open('ex.bin','wb') as file:\n",
+    "    file.write(data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x01\\x02\\x03\\x04'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('ex.bin','rb') as file:\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# read the content from source text file and erite to destination text file\n"
+   ]
   }
  ],
  "metadata": {
