--- a/1)Notes/6-File Handling/file_operations.ipynb
+++ b/1)Notes/6-File Handling/file_operations.ipynb
@@ -148,12 +148,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read the content from source text file and erite to destination text file\n"
+    "# read the content from source text file and erite to destination text file\n",
+    "\n",
+    "# coping a text file \n",
+    "with open('ex.txt','r') as file:\n",
+    "    content = file.read()\n",
+    "\n",
+    "with open('destination.txt','w') as destination_file:\n",
+    "    destination_file.write(content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 15, 96)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read a text file and count the number of lines, words, and characters.\n",
+    "# counting lines, words and characters in a text file\n",
+    "\n",
+    "def count_text_file(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        lines_count = len(lines)\n",
+    "        word_count = sum(len(line.split()) for line in lines)\n",
+    "        char_count = sum(len(line) for line in lines)\n",
+    "    return lines_count, word_count, char_count\n",
+    "file_path = 'destination.txt'\n",
+    "print(count_text_file(file_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
