--- a/1)Notes/6-File Handling/file_operations.ipynb
+++ b/1)Notes/6-File Handling/file_operations.ipynb
@@ -191,11 +191,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "THe w+ mode in python is used to open a file for both reading and writting. if the file does not existed, then it will be created. if the file exists, its content is truncated (i.e file is overwritten)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# writing and reading the file\n",
+    "with open('exe.txt','w+') as file:\n",
+    "    file.write(\"hello\\n\")\n",
+    "    file.write(\"this file does not existed but it is created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "this file does not existed but it is created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# move the cursor(|) to the beginning\n",
+    "with open('exe.txt','r') as file:\n",
+    "\n",
+    "    file.seek(0) #--> cursor present at the starting of line\n",
+    "\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
   }
  ],
  "metadata": {
