--- a/1)Notes/6-File Handling/working_eith_filepaths.ipynb
+++ b/1)Notes/6-File Handling/working_eith_filepaths.ipynb
@@ -158,10 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\AIML\\GIT\\Machine-learning-course\\1)Notes\\6-File Handling\\ex.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the absolute path \n",
+    "relative_path = 'ex.txt'\n",
+    "absolute_path=os.path.abspath(relative_path)\n",
+    "print(absolute_path)"
+   ]
   }
  ],
  "metadata": {
