--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -69,7 +69,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hii \n",
+      "my name  is vaibhs \n",
+      "pursuing aiml course by krish naik\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('sample.txt','r') as file:\n",
+    "    content = file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d735d585",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "hello\n",
+      "world\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def write_to_file(lines):\n",
+    "    with open('output.txt','w') as file:\n",
+    "        writing = file.writelines(lines)\n",
+    "\n",
+    "    return writing\n",
+    "\n",
+    "lines = [(\"hello\\n\"),(\"world\\n\")]\n",
+    "\n",
+    "print(write_to_file(lines))\n",
+    "\n",
+    "with open('output.txt','r') as src:\n",
+    "    content=src.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "50c6b330",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
