--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -123,8 +123,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "50c6b330",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def coping_files(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        content = file.read()\n",
+    "\n",
+    "    with open('copy_file.txt','w+') as cfile:\n",
+    "        writing = cfile.write(content)\n",
+    "\n",
+    "    return writing\n",
+    "\n",
+    "file_path = 'sample.txt'\n",
+    "coping_files(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "25f1caf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appended\n"
+     ]
+    }
+   ],
+   "source": [
+    "def appending(file_path,text):\n",
+    "    with open(file_path,'a') as file:\n",
+    "        file.write(text +'\\n')\n",
+    "        print(\"Appended\")\n",
+    "\n",
+    "appending(\"output.txt\",\"any thing you want\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f53eedc3",
    "metadata": {},
    "outputs": [],
    "source": []
