--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -178,8 +178,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f53eedc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world', 'any', 'thing', 'you', 'want']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def counting(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        content = file.read()\n",
+    "        words = content.split()\n",
+    "        print(words)\n",
+    "        return len(words)\n",
+    "    \n",
+    "counting(\"output.txt\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76fed1d2",
    "metadata": {},
    "outputs": [],
    "source": []
