--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -215,8 +215,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "76fed1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finding_word(file_path,new_word,old_word):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        content = file.read()\n",
+    "\n",
+    "    new_content = content.replace(old_word,new_word)\n",
+    "\n",
+    "    with open(file_path,'w') as file:\n",
+    "        file.write(new_content)\n",
+    "    \n",
+    "finding_word('copy_file.txt',\"hello\",\"hii\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14da969c",
    "metadata": {},
    "outputs": [],
    "source": []
