--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -234,16 +234,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "14da969c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "any thing you want\n",
+      "\n",
+      "world\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reading_in_reverse(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        content = file.readlines()\n",
+    "\n",
+    "    for line in reversed(content):\n",
+    "        print(line.strip())\n",
+    "reading_in_reverse(\"output.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "21659835",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 61, 11)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def counting(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "        total_lines = len(lines)\n",
+    "        total_words = sum(len(line.split()) for line in lines)\n",
+    "        total_char = sum(len(line) for line in lines)\n",
+    "    return total_lines, total_char,total_words\n",
+    "\n",
+    "counting(\"copy_file.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "af893b92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'merging.txt'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merging(first_file,output_file):\n",
+    "    with open(first_file,'r') as ffile:\n",
+    "        content=ffile.read()\n",
+    "    with open(output_file,'w+') as ofile:\n",
+    "        ofile.write(content)\n",
+    "    \n",
+    "    return output_file\n",
+    "merging(\"sample.txt\",\"merging.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e83dc9a6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# another solution for above problem\n",
+    "def merge_files(file_list,output_file):\n",
+    "    with open(output_file,'w') as outfile:\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
