--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e83dc9a6",
    "metadata": {},
    "outputs": [],
@@ -326,8 +326,20 @@
     "# another solution for above problem\n",
     "def merge_files(file_list,output_file):\n",
     "    with open(output_file,'w') as outfile:\n",
-    "        "
+    "        for fname in file_list:\n",
+    "            with open(fname,\"r\") as ffile:\n",
+    "                outfile.write(ffile.read()+'\\n')\n",
+    "\n",
+    "merge_files(['file1.txt','file2.txt'],'mergedfile.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67819a19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
