--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -335,8 +335,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "67819a19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_file(filename, lines_per_file):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    for i in range(0, len(lines), lines_per_file):\n",
+    "        with open(f'{filename}_part{i//lines_per_file + 1}.txt', 'w') as part_file:\n",
+    "            part_file.writelines(lines[i:i + lines_per_file])\n",
+    "\n",
+    "split_file('large.txt', 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "64dd6a43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "def log_message(message,file_name='activity.log'):\n",
+    "    timestamps = datetime.datetime.now().isoformat()\n",
+    "    with open(file_name,'a') as file:\n",
+    "        file.write(f'{timestamps}|{message}')\n",
+    "\n",
+    "log_message(\"hello this is log message\")\n",
+    "\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e1b9faf",
    "metadata": {},
    "outputs": [],
    "source": []
