--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -371,8 +371,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8e1b9faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy_binary_file(source, destination):\n",
+    "    with open(source, 'rb') as src:\n",
+    "        with open(destination, 'wb+') as dest:\n",
+    "            dest.write(src.read())\n",
+    "\n",
+    "copy_binary_file('image.bin', 'copy_image.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1195cad5",
    "metadata": {},
    "outputs": [],
    "source": []
