--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -386,16 +386,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1195cad5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'hello': 'worldddd'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open('data.csv','r') as file:\n",
+    "    content=csv.DictReader(file)\n",
+    "\n",
+    "    print(list(content))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58578544",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "\n",
+    "def read_json(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "        return data\n",
+    "    \n",
+    "print(read_json('data.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "163a27d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "world\n",
+      "\n",
+      "any thing you want\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_protected_file(filename):\n",
+    "    try:\n",
+    "        with open(filename, 'r') as file:\n",
+    "            print(file.read())\n",
+    "    except PermissionError as e:\n",
+    "        print(f\"Permission error: {e}\")\n",
+    "read_protected_file('output.txt')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
