--- a/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
+++ b/2)Assignments/Assignment9(file_handling)solution/Assignment9(FileHandling)solution.ipynb
@@ -408,10 +408,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "58578544",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Vaibhav', 'age': 20, 'isStudent': True, 'skills': ['Python', 'JavaScript', 'Machine Learning'], 'address': {'street': '123 Main Street', 'city': 'Mumbai', 'country': 'India'}}\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
