--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -182,8 +182,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "78c2f0af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n",
+      "execution completed\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Division:\n",
+    "    def divide(self,num):\n",
+    "        try:\n",
+    "            \n",
+    "            result = 10/num\n",
+    "        except ZeroDivisionError as ex:\n",
+    "            print(ex)\n",
+    "            result = None\n",
+    "        finally:\n",
+    "            print(\"execution completed\")\n",
+    "        return result\n",
+    "Div = Division()\n",
+    "print(Div.divide(0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d06b77ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occured in riskey function\n",
+      "code executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "def riskey_fun():\n",
+    "    raise ValueError(\"An error occured in riskey function\")\n",
+    "def safe_fun():\n",
+    "    try:\n",
+    "        riskey_fun()\n",
+    "    except ValueError as e:\n",
+    "        print(e)\n",
+    "    finally:\n",
+    "        print(\"code executed\")\n",
+    "safe_fun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086ab84e",
    "metadata": {},
    "outputs": [],
    "source": []
