--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -242,8 +242,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "086ab84e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative number is found : -2\n",
+      "execution completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NegativeNumberError(Exception):\n",
+    "    pass\n",
+    "def check_negative_number(lst):\n",
+    "    try:\n",
+    "        for num in lst:\n",
+    "            if num<0:\n",
+    "                raise NegativeNumberError(f\"Negative number is found : {num}\")\n",
+    "            \n",
+    "    except NegativeNumberError as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    finally:\n",
+    "        print(\"execution completed\")\n",
+    "\n",
+    "check_negative_number([1,-2,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "708c53c2",
    "metadata": {},
    "outputs": [],
    "source": []
